--- a/serialization.csproj
+++ b/serialization.csproj
@@ -36,6 +36,7 @@
         <Reference Include="System" />
         <Reference Include="System.Core" />
         <Reference Include="System.Data" />
+        <Reference Include="System.Runtime.Serialization.Formatters.Soap" />
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
